Change StoryTemplate structure to have SupportedArchetypes
- This makes it easier to write texts in templates so that
  they match the expected archetype but still leave some
  room for re-use in parts of the template
- Also added StoryElementChecker that shows in the
  UI if there are problems (still wip)

--- a/JiME.csproj
+++ b/JiME.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Procedural\ProceduralGenerator.cs" />
     <Compile Include="Procedural\ProceduralGeneratorParameters.cs" />
     <Compile Include="Procedural\GenerationLogic\StoryGenerator.cs" />
+    <Compile Include="Procedural\StoryElements\StoryElementChecker.cs" />
     <Compile Include="Procedural\StoryElements\StoryFragment.cs" />
     <Compile Include="Procedural\StoryElements\StoryLocation.cs" />
     <Compile Include="Procedural\StoryElements\StoryTemplate.cs" />
