--- a/JiME.csproj
+++ b/JiME.csproj
@@ -497,6 +497,7 @@
     <EmbeddedResource Include="Procedural\Assets\story-locations.json" />
     <EmbeddedResource Include="Procedural\Assets\story-fragments.json" />
     <None Include="CHANGELOG.md" />
+    <EmbeddedResource Include="Procedural\Assets\StoryTemplates\orc-chieftain.json" />
     <None Include="Procedural\README.md" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
