Don't export default Monster Activations, only custom ones

--- a/JiME.csproj
+++ b/JiME.csproj
@@ -78,6 +78,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Common\CollectionConverter.cs" />
+    <Compile Include="Common\ActivationsListConverter.cs" />
     <Compile Include="Common\Commands.cs" />
     <Compile Include="Common\Converters.cs" />
     <Compile Include="Common\ErrorChecker.cs" />
