Allow translating scenario text in the editor

--- a/JiME.csproj
+++ b/JiME.csproj
@@ -94,6 +94,8 @@
     <Compile Include="Models\Collection.cs" />
     <Compile Include="Models\BaseTile.cs" />
     <Compile Include="Models\Interaction Events\PersistentInteractionBase.cs" />
+    <Compile Include="Models\TranslationItem.cs" />
+    <Compile Include="Models\Translation.cs" />
     <Compile Include="Models\SquareTile.cs" />
     <Compile Include="Models\HexTile.cs" />
     <Compile Include="Models\Chapter.cs" />
@@ -144,6 +146,12 @@
     </Compile>
     <Compile Include="UserControls\SidebarListView.xaml.cs">
       <DependentUpon>SidebarListView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\TranslationItemEditorWindow.xaml.cs">
+      <DependentUpon>TranslationItemEditorWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\TranslationEditorWindow.xaml.cs">
+      <DependentUpon>TranslationEditorWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\CampaignTriggerEditor.xaml.cs">
       <DependentUpon>CampaignTriggerEditor.xaml</DependentUpon>
@@ -281,6 +289,14 @@
     <Page Include="UserControls\SidebarListView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\TranslationItemEditorWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\TranslationEditorWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\CampaignTriggerEditor.xaml">
       <SubType>Designer</SubType>
