Able to serialize/deserialize and save/load the ItemInteraction

--- a/JiME.csproj
+++ b/JiME.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Common\CustomMonsterModifierListConverter.cs" />
     <Compile Include="Common\CollectionConverter.cs" />
     <Compile Include="Common\ActivationsListConverter.cs" />
+    <Compile Include="Common\ItemListConverter.cs" />
     <Compile Include="Common\MonsterModifierListConverter.cs" />
     <Compile Include="Common\Commands.cs" />
     <Compile Include="Common\Converters.cs" />
