--- a/JiME.csproj
+++ b/JiME.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Models\Campaign.cs" />
     <Compile Include="Models\Collection.cs" />
     <Compile Include="Models\BaseTile.cs" />
+    <Compile Include="Models\Interaction Events\CorruptionInteraction.cs" />
     <Compile Include="Models\Interaction Events\StartInteraction.cs" />
     <Compile Include="Models\Interaction Events\TitleInteraction.cs" />
     <Compile Include="Models\Interaction Events\PersistentInteractionBase.cs" />
@@ -158,6 +159,9 @@
     </Compile>
     <Compile Include="UserControls\SidebarListView.xaml.cs">
       <DependentUpon>SidebarListView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Interactions\CorruptionInteractionWindow.xaml.cs">
+      <DependentUpon>CorruptionInteractionWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Interactions\TitleInteractionWindow.xaml.cs">
       <DependentUpon>TitleInteractionWindow.xaml</DependentUpon>
@@ -310,6 +314,10 @@
     <Page Include="UserControls\SidebarListView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Interactions\CorruptionInteractionWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\Interactions\TitleInteractionWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
